--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 <!--cover section slider -->
 <section id="home" class="home-cover">
     <div class="cover_slider owl-carousel owl-theme">
-        <div class="cover_item" style="background: url('assets/img/bg/slider.png');">
+        <div class="cover_item" style="background: url('assets/img/bg/bg1.png');">
              <div class="slider_content">
                 <div class="slider-content-inner">
                     <div class="container">
                         <div class="slider-content-center">
                             <h2 class="cover-title">
-                                Prepare yourself for the
+                                We build apps for
                             </h2>
-                            <strong class="cover-xl-text">conference</strong>
+                            <strong class="cover-xl-text">Metaverse</strong>
                             <p class="cover-date">
                                 12-14 February 2018  - Los Angeles, CA.
                             </p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="cover_item" style="background: url('assets/img/bg/slider.png');">
+        <div class="cover_item" style="background: url('assets/img/bg/bg2.png');">
             <div class="slider_content">
                 <div class="slider-content-inner">
                     <div class="container">
@@ -100,7 +100,7 @@
                             <h2 class="cover-title">
                                 Prepare yourself for the
                             </h2>
-                            <strong class="cover-xl-text">conference</strong>
+                            <strong class="cover-xl-text">BudoApps</strong>
                             <p class="cover-date">
                                 12-14 February 2018  - Los Angeles, CA.
                             </p>
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <div class="cover_item" style="background: url('assets/img/bg/slider.png');">
+        <div class="cover_item" style="background: url('assets/img/bg/bg3.png');">
             <div class="slider_content">
                 <div class="slider-content-inner">
                     <div class="container">
@@ -210,12 +210,12 @@
 
 
 <!--event countdown -->
-<section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/bg-img.png');">
+<section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/bg4.png');">
     <div class="overlay_dark"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
-                <h4 class="mb30 text-center color-light">Counter until the big event</h4>
+                <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click Here to Learn More.</h4>
                 <div class="countdown"></div>
             </div>
         </div>
@@ -318,9 +318,9 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s1.png" alt="speaker name">
+                    <img src="assets/img/speakers/bg5.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Patricia Stone</h5>
+                        <h5 class="name">Business Requirements</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
