--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <div class="container">
         <div class="section_title mb50">
             <h3 class="title">
-               our speakers
+               our services
             </h3>
         </div>
     </div>
@@ -678,7 +678,7 @@
                 <div class="footer_box">
                     <div class="footer_header">
                         <div class="footer_logo">
-                            <img src="assets/img/logo.png" alt="evento">
+                            <img src="assets/img/BudoApps.png" alt="evento" style="max-width:50%;">
                         </div>
                     </div>
                     <div class="footer_box_body">
@@ -760,7 +760,7 @@
                     <div class="footer_box_body">
                         <div class="newsletter_form">
                             <input type="email" class="form-control" placeholder="E-Mail here">
-                            <button class="btn btn-rounded btn-block btn-primary">SUBSCRIBE</button>
+                            <button class="btn btn-rounded btn-block btn-primary">REQUEST INFORMATION</button>
                         </div>
                     </div>
                 </div>
