--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/bg5.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Business Requirements</h5>
+                        <h5 class="name">Business/Technical Requirements</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -331,7 +331,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s2.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">James Oliver</h5>
+                        <h5 class="name">Mobile Apps</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -343,7 +343,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s3.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Carla Banks</h5>
+                        <h5 class="name">Websites</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s4.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">William Smith</h5>
+                        <h5 class="name">Metaverse</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -365,7 +365,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s5.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Jessica Black</h5>
+                        <h5 class="name">Artificial Intelligence</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s6.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Patricia Stone</h5>
+                        <h5 class="name">Video Games</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -387,7 +387,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s7.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Duncan Stan</h5>
+                        <h5 class="name">SharePoint</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
@@ -398,7 +398,7 @@
                 <div class="speaker_img">
                     <img src="assets/img/speakers/s8.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Patricia Stone</h5>
+                        <h5 class="name">Migrations</h5>
                         <p class="position">CEO Company</p>
                     </div>
                 </div>
