--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </section>
 <!--cover section slider end -->
 
-<!--event info -->
+<!--event info
 <section class="pt100 pb100">
     <div class="container">
         <div class="row justify-content-center">
@@ -206,7 +206,7 @@
         </div>
     </div>
 </section>
-<!--event info end -->
+event info end -->
 
 
 <!--event countdown -->
@@ -224,7 +224,7 @@
 <!--event count down end-->
 
 
-<!--about the event -->
+<!--about the event
 <section class="pt100 pb100">
     <div class="container">
         <div class="section_title">
@@ -245,7 +245,6 @@
             </div>
         </div>
 
-        <!--event features-->
         <div class="row justify-content-center mt30">
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="icon_box_one">
@@ -299,16 +298,14 @@
                 </div>
             </div>
         </div>
-        <!--event features end-->
     </div>
 </section>
-<!--about the event end -->
-
+about the event end -->
 
 <!--speaker section-->
 <section class="pb100">
     <div class="container">
-        <div class="section_title mb50">
+        <div class="section_title mb50" style="margin-top:100px">
             <h3 class="title">
                our services
             </h3>
@@ -321,7 +318,7 @@
                     <img src="assets/img/speakers/bg5.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Business/Technical Requirements</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -329,10 +326,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s2.png" alt="speaker name">
+                    <img src="assets/img/speakers/bg6.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Mobile Apps</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -341,10 +338,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s3.png" alt="speaker name">
+                    <img src="assets/img/speakers/bg7.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Websites</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -352,10 +349,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s4.png" alt="speaker name">
+                    <img src="assets/img/speakers/bg8.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Metaverse</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -363,10 +360,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s5.png" alt="speaker name">
+                    <img src="assets/img/speakers/b9.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Artificial Intelligence</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -374,10 +371,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s6.png" alt="speaker name">
+                    <img src="assets/img/speakers/b10.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Video Games</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -385,10 +382,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s7.png" alt="speaker name">
+                    <img src="assets/img/speakers/b11.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">SharePoint</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -396,10 +393,10 @@
         <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s8.png" alt="speaker name">
+                    <img src="assets/img/speakers/b12.png" alt="speaker name">
                     <div class="info_box">
                         <h5 class="name">Migrations</h5>
-                        <p class="position">CEO Company</p>
+                        <p class="position">Read More</p>
                     </div>
                 </div>
             </div>
@@ -408,7 +405,7 @@
 </section>
 <!--speaker section end -->
 
-<!--Price section-->
+<!--Price section
 <section class="pb100">
     <div class="container">
         <div class="section_title mb50">
@@ -526,9 +523,10 @@
         </div>
     </div>
 </section>
-<!--price section end -->
 
-<!--event calender-->
+price section end -->
+
+<!--event calender
 <section class="pb100">
     <div class="container">
         <div class="table-responsive">
@@ -617,7 +615,7 @@
         </div>
     </div>
 </section>
-<!--event calender end -->
+event calender end -->
 
 <!--brands section -->
 <section class="bg-gray pt100 pb100">
@@ -649,7 +647,7 @@
 </section>
 <!--brands section end-->
 
-<!--get tickets section -->
+<!--get tickets section
 <section class="bg-img pt100 pb100" style="background-image: url('assets/img/bg/tickets.png');">
     <div class="container">
         <div class="section_title mb30">
@@ -667,7 +665,7 @@
         </div>
     </div>
 </section>
-<!--get tickets section end-->
+get tickets section end-->
 
 <!--footer start -->
 <footer>
