--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ get tickets section end-->
                     </div>
                     <div class="footer_box_body">
                         <p>
-                            Tell us about your project at support@budoapps.com
+                            Request more information at support@budoapps.com
                         </p>
                         <ul class="footer_social">
                             <li>
@@ -735,7 +735,7 @@ get tickets section end-->
                 <div class="footer_box">
                     <div class="footer_header">
                         <h4 class="footer_title">
-                            Lets talk about your project
+                            Come Schedule a Call With Us
                         </h4>
                     </div>
                     <div class="footer_box_body">
