--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ about the event end -->
                     <img src="assets/img/speakers/bg5.png" alt="speaker name">
                     <a href="business_requirements.html">
                         <div class="info_box">
-                            <h5 class="name">Business/Technical Requirements</h5>
+                            <h5 class="name">Business & Technical Requirements</h5>
                             <p class="position">Read More</p>
                         </div>
     
