--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="container">
                         <div class="slider-content-left">
                             <h2 class="cover-title">
-                                Stand out of the crowd with
+                                Level up with
                             </h2>
                             <strong class="cover-xl-text">Mobile & Web Apps</strong>
                      
@@ -102,7 +102,7 @@
                     <div class="container">
                         <div class="slider-content-center">
                             <h2 class="cover-title">
-                                Plan your success with
+                                Find success
                             </h2>
                             <strong class="cover-xl-text">Requirements & Strategy</strong>
 
