--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                     <div class="container">
                         <div class="slider-content-left">
                             <h2 class="cover-title">
-                                Level up with
+                                Stand out of the crowd with
                             </h2>
-                            <strong class="cover-xl-text">Mobile & Web Apps</strong>
+                            <strong class="cover-xl-text">Mobile Apps</strong>
                      
                         </div>
                     </div>
@@ -102,9 +102,9 @@
                     <div class="container">
                         <div class="slider-content-center">
                             <h2 class="cover-title">
-                                Find success
+                                Plan your success with
                             </h2>
-                            <strong class="cover-xl-text">Requirements & Strategy</strong>
+                            <strong class="cover-xl-text">Strategy</strong>
 
                         </div>
                     </div>
@@ -297,7 +297,7 @@ about the event end -->
                     <img src="assets/img/speakers/bg5.png" alt="speaker name">
                     <a href="business_requirements.html">
                         <div class="info_box">
-                            <h5 class="name">Business & Technical Requirements</h5>
+                            <h5 class="name">Business &Technical Requirements</h5>
                             <p class="position">Read More</p>
                         </div>
     
