--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ event info end -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
-                <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a href="#"><span style="color:#EC1F28;font-size:23px;font-weight:bold">Here</span></a> to Learn More.</h4>
+                <h4 class="mb30 text-center color-light">DrinkLife Manager Beta Testing. Click <a href="#"><span style="color:#EC1F28;font-size:24px;font-weight:bold">Here</span></a> to Learn More.</h4>
                 <div class="countdown"></div>
             </div>
         </div>
@@ -694,15 +694,40 @@ get tickets section end-->
                             instagram
                         </h4>
                     </div>
-                    <!-- Place <div> tag where you want the feed to appear -->
-<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div><!-- The Javascript can be moved to the end of the html page before the </body> tag --><script type="text/javascript">
-    /* curator-feed-default-feed-layout */
-    (function(){
-    var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
-    i.src="https://cdn.curator.io/published/69fa30d2-d8cb-4717-aa2a-ac17229bdf85.js";
-    e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
-    })();
-    </script>
+                    <div class="footer_box_body">
+                        <ul class="instagram_list">
+                            <li>
+                                <a href="#">
+                                    <img src="assets/img/cleander/c1.png" alt="instagram">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="assets/img/cleander/c2.png" alt="instagram">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="assets/img/cleander/c3.png" alt="instagram">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="assets/img/cleander/c3.png" alt="instagram">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="assets/img/cleander/c2.png" alt="instagram">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="assets/img/cleander/c1.png" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
