--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title> BudoApps</title>
+    <title>BudoApps</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
@@ -47,15 +47,15 @@
             <div class="collapse navbar-collapse flex-sm-row-reverse" id="headernav">
                 <ul class=" nav navbar-nav menu">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#home" style="color:#EC1F28;">Home</a>
+                        <a class="nav-link active" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#services" style="color:#EC1F28">Services</a>
+                        <a class="nav-link " href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#contact" style="color:#EC1F28">Contact</a>
+                        <a class="nav-link " href="#contact">Contact</a>
                     </li>
-                    <li class="search_btn" style="color:#EC1F28">
+                    <li class="search_btn">
                         <a href="#">
                             <i class="ion-ios-search"></i>
                         </a>
@@ -69,7 +69,7 @@
     <!--cover section slider -->
     <section id="home" class="home-cover">
         <div class="cover_slider owl-carousel owl-theme">
-            <div class="cover_item" style="background: url('assets/img/bg/bg1.png');">
+            <div class="cover_item" style="background: url('assets/img/bg/bg1-dark.jpg');">
                 <div class="slider_content">
                     <div class="slider-content-inner">
                         <div class="container">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cover_item" style="background: url('assets/img/bg/bg2.png');">
+            <div class="cover_item" style="background: url('assets/img/bg/bg2-dark.png');">
                 <div class="slider_content">
                     <div class="slider-content-inner">
                         <div class="container">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cover_item" style="background: url('assets/img/bg/bg3.png');">
+            <div class="cover_item" style="background: url('assets/img/bg/bg3-dark.png');">
                 <div class="slider_content">
                     <div class="slider-content-inner">
                         <div class="container">
@@ -300,13 +300,11 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/bg5.png" alt="speaker name">
-                        <a href="business_requirements.html">
+                        <a href="strategy.html">
                             <div class="info_box">
-                                <h5 class="name">Business & Technical Requirements</h5>
+                                <h5 class="name">Strategy</h5>
                                 <p class="position">Read More</p>
                             </div>
-
-
                         </a>
                     </div>
                 </div>
@@ -315,10 +313,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/bg6.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Mobile Apps</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="mobile-apps.html">
+                            <div class="info_box">
+                                <h5 class="name">Mobile Apps</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
@@ -327,10 +327,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/bg7.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Websites</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="websites.html">
+                            <div class="info_box">
+                                <h5 class="name">Websites</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -338,10 +340,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/bg8.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Metaverse</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="metaverse.html">
+                            <div class="info_box">
+                                <h5 class="name">Metaverse</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -349,10 +353,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/b9.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Artificial Intelligence</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="artificial-intelligence.html">
+                            <div class="info_box">
+                                <h5 class="name">Artificial Intelligence</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -360,10 +366,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/b10.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Video Games</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="video-games.html">
+                            <div class="info_box">
+                                <h5 class="name">Video Games</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -371,10 +379,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/b11.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">SharePoint</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="sharepoint.html">
+                            <div class="info_box">
+                                <h5 class="name">SharePoint</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -382,10 +392,12 @@ about the event end -->
                 <div class="speaker_box">
                     <div class="speaker_img">
                         <img src="assets/img/speakers/b12.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Migrations</h5>
-                            <p class="position">Read More</p>
-                        </div>
+                        <a href="migrations.html">
+                            <div class="info_box">
+                                <h5 class="name">Migrations</h5>
+                                <p class="position">Read More</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
