--- a/migrations.html
+++ b/migrations.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title> Business Requirements</title>
+    <title>Migrations</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
@@ -32,61 +32,52 @@
     <div class="loader-inner"></div>
 </div>
 
-<!--header start here -->
-<header class="header navbar fixed-top navbar-expand-md">
-    <div class="container">
-        <a class="navbar-brand logo" href="#">
-            <img src="assets/img/BudoApps.png" alt="Evento"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="lnr lnr-text-align-right"></span>
-        </button>
-        <div class="collapse navbar-collapse flex-sm-row-reverse" id="headernav">
-            <ul class=" nav navbar-nav menu">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Speakers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Contact</a>
-                </li>
-                <li class="search_btn">
-                    <a  href="#">
-                       <i class="ion-ios-search"></i>
-                    </a>
-                </li>
-            </ul>
+    <!--header start here -->
+    <header class="header navbar fixed-top navbar-expand-md">
+        <div class="container">
+            <a class="navbar-brand logo" href="https://home.budoapps.com/#home">
+                <img src="assets/img/BudoApps.png" alt="Evento" />
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="lnr lnr-text-align-right"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-sm-row-reverse" id="headernav">
+                <ul class=" nav navbar-nav menu">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="https://home.budoapps.com/#home" style="color:#EC1F28;">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="https://home.budoapps.com/#services" style="color:#EC1F28">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="https://home.budoapps.com/#contact" style="color:#EC1F28">Contact</a>
+                    </li>
+                    <li class="search_btn" style="color:#EC1F28">
+                        <a href="#">
+                            <i class="ion-ios-search"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</header>
-<!--header end here-->
+    </header>
+    <!--header end here-->
 
 
 
 
-<section class="bg-img pt100 pb100" style="background-image: url('assets/img/bg/tickets.png');">
+<section class="bg-img pt100 pb100" style="background-image: url('assets/img/speakers/b12-dark.png');">
     <div class="container" style="margin-top:50px">
         <div class="section_title mb30">
             <h3 class="title color-light">
-                Business & Tecnhnical Requirements
+                Migrations
             </h3>
         </div>
         <div class="row justify-content-center align-items-center">
             <div class="col-md-9 text-md-left text-center color-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-            
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-            
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-
+                Let us help you move your data from point A to point B. Our migration team will work with you to perform migration analysis and specifications.
+                We migrate data on various technical platforms and environments.
             </div>
 
         </div>
