--- a/websites.html
+++ b/websites.html
@@ -45,15 +45,15 @@
             <div class="collapse navbar-collapse flex-sm-row-reverse" id="headernav">
                 <ul class=" nav navbar-nav menu">
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://home.budoapps.com/#home" style="color:#EC1F28;">Home</a>
+                        <a class="nav-link active" href="https://home.budoapps.com/#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="https://home.budoapps.com/#services" style="color:#EC1F28">Services</a>
+                        <a class="nav-link " href="https://home.budoapps.com/#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="https://home.budoapps.com/#contact" style="color:#EC1F28">Contact</a>
+                        <a class="nav-link " href="https://home.budoapps.com/#contact">Contact</a>
                     </li>
-                    <li class="search_btn" style="color:#EC1F28">
+                    <li class="search_btn">
                         <a href="#">
                             <i class="ion-ios-search"></i>
                         </a>
